--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,27 +7,39 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Wellness Mobile Clinic"
         android:supportsRtl="true"
         android:theme="@style/Theme.WilApp"
         tools:targetApi="31">
         <activity
-            android:name=".Login"
+            android:name=".EditScreeningActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddScreeningActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditProcedureActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddProcedureActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LearnerProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FindLearnerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddLearnerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
             android:exported="false" />
         <activity
             android:name=".SignUp"
             android:exported="false" />
         <activity
-            android:name=".ViewNew"
-            android:exported="false" />
-        <activity
-            android:name=".AddNew"
-            android:exported="false" />
-        <activity
-            android:name=".HomePage"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
