--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ jobs:
   - task: Gradle@2
     inputs:
       workingDirectory: ''
-      gradleWrapperFile: 'gradlew'
+      gradleWrapperFile: 'gradlew.bat'
       gradleOptions: '-Xmx2048m -Dfile.encoding=UTF-8'
       publishJUnitResults: true
       tasks: 'assembleDebug'
